1st release for grails 3 wschat:3.0.1